DAO/main/default/objects/DAO_Application__c/DAO_Application__c.object-meta.xml
<CustomObject>
    <description>Deposit account opening (DAO) wizard application shell and integration state.</description>
    <label>DAO Application</label>
    <nameField>
        <displayFormat>DAO-{000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAO Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>