DAO/main/default/objects/DAO_Application__c/fields/Applicant_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Entity_Type__c</fullName>
    <description>Whether the primary customer on this DAO application is an individual (Person Account) or a business entity (Account).</description>
    <label>Applicant entity type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>