DAO/main/default/objects/DAO_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Date the application was started or submitted.</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>