DAO/main/default/objects/DAO_Application__c/fields/ChexSystems_Status__c.field-meta.xml
<CustomField>
    <fullName>ChexSystems_Status__c</fullName>
    <description>ChexSystems screening outcome.</description>
    <label>ChexSystems Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not_Run</fullName>
                <default>true</default>
                <label>Not Run</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Hit</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>