DAO/main/default/objects/DAO_Application__c/fields/Funding_Method__c.field-meta.xml
<CustomField>
    <fullName>Funding_Method__c</fullName>
    <description>How the account will be funded.</description>
    <label>Funding Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Debit_Card</fullName>
                <label>Debit Card</label>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Plaid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>