DAO/main/default/objects/DAO_Application__c/fields/Party_Data__c.field-meta.xml
<CustomField>
    <fullName>Party_Data__c</fullName>
    <description>JSON payload for application signers / parties.</description>
    <label>Party Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>