DAO/main/default/objects/DAO_Application__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account (use Person Account record type for FSC retail customers).</description>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DAO Applications</relationshipLabel>
    <relationshipName>DAO_Applications_As_Person_Account</relationshipName>
    <type>Lookup</type>
</CustomField>