DAO/main/default/objects/DAO_Application__c/fields/Wizard_Payload__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Payload__c</fullName>
    <description>Optional JSON snapshot of wizard answers for banker resume.</description>
    <label>Wizard Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>